to less state management
remove notes react state
remove notes localstorage code

only storing  values in folders state
using that state to get value of folderNotes instead of managing two states
use useMemo hook to avoid re-render in notes

--- a/src/sassStyles/components/_buttons.scss
+++ b/src/sassStyles/components/_buttons.scss
@@ -29,6 +29,7 @@ button {
   color: var(--text-box);
   border-radius: 5px;
   font-size: .85rem;
+  cursor: pointer;
   padding: 4px 12px;
 }
 
@@ -43,6 +44,7 @@ button {
   box-shadow: inset 0px 0px 7px 2px #ff9dea;
   scale: 1.3;
   font-size: 1.2rem;
+  cursor: pointer;
   padding: 4px 9px;
 }
 
