--- a/src/sassStyles/_notesList.scss
+++ b/src/sassStyles/_notesList.scss
@@ -5,6 +5,9 @@
   transform: translate(-50%, -50%);
   color: var(--text);
   text-align: center;
+
+  display: grid;
+  place-items: center;
 }
 
 .notes-list,
@@ -30,14 +33,6 @@
       scale: 1.02;
     }
 
-    h3 {
-      text-align: center;
-    }
-
-    p {
-      opacity: 0.85;
-    }
-
     &-text {
       font-size: 1rem;
       white-space: pre-wrap;
@@ -45,6 +40,73 @@
 
     &-date {
       font-size: .7rem;
+    }
+  }
+
+  h3 {
+    text-align: center;
+  }
+
+  p {
+    opacity: 0.85;
+  }
+}
+
+.folders-list {
+
+  .folder {
+    position: relative;
+    padding: 1rem 2rem;
+    border-radius: .5rem;
+    text-align: center;
+    background: var(--note-bg);
+    box-shadow: var(--note-shadow);
+
+    &-icon {
+      font-size: 5rem;
+      transition: all .3s ease;
+
+      &:hover {
+        font-size: 5.2rem;
+      }
+    }
+
+    .dots-icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+      padding: 10px;
+      cursor: pointer;
+    }
+
+    .dots-label {
+      display: none;
+    }
+
+    .dots-label:checked+.tooltip {
+      scale: 1;
+    }
+
+    .tooltip {
+      scale: 0;
+      text-align: center;
+      padding: 10px;
+      border-radius: 5px;
+      background: var(--app-bg);
+      transition: all .3s ease-in-out;
+
+      position: absolute;
+      right: 20px;
+      display: grid;
+      gap: 10px;
+
+      button {
+        position: static;
+
+        a {
+          color: var(--white);
+        }
+      }
     }
   }
 }
